fixed login spacing and faqs

--- a/src/modules/registration/login/login.scss
+++ b/src/modules/registration/login/login.scss
@@ -27,7 +27,7 @@
   text-align: center;
   text-decoration: none !important;
   position: relative;
-  top: -80px;
+  top: -15px;
 }
 
 .forgotPass a {
@@ -64,6 +64,7 @@
 		width: calc(100% - 20px);
 		display: block;
 		margin: 0 auto;
+
 	}
 }
 
